<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_baseline_local_movies_24"
        android:title="@string/movie"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tvShowFragment"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/tv_show"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
</menu>